fixed header-link color change, spacing in header, font-size

--- a/app/assets/stylesheets/components/main-header.scss
+++ b/app/assets/stylesheets/components/main-header.scss
@@ -3,7 +3,8 @@
     font-family: "Duru Sans";
     
     font-weight: 600;
-    display: flex;
+    display: grid;
+    grid-template-columns: 30% 45% 25%;
     background-color: $header-red;
     color: $header-text-grey;
     text-align: center;
@@ -12,14 +13,15 @@
         text-transform: uppercase;
         font-size: 30px;
         color: $header-text-grey;
-        margin: auto 50px auto 150px;
+       
         display: flex;
-        width: 150px;
+        flex-direction: row;
+        justify-content: flex-end;
         align-items: center;
         
                 .logo {
                 background-color: $header-text-grey;
-                text-align: center;
+                // text-align: center;
                 vertical-align: middle;
                 color: $header-red;
                 border-radius: 100%;
@@ -49,12 +51,16 @@
         align-items: center;
         font-weight: 500;
         justify-content: space-evenly;
+        font-size: 14px;
         >ul{
             display: flex;
             align-items: center;
+           
             >li{
                 margin: 0 10px;
                 padding: 0;
+                text-align: center;
+                
             }
         }
     }
@@ -62,12 +68,12 @@
     .right-main-header{
        
         display: flex;
-        font-size: 12px;
+        font-size: 10px;
         
         .install-button {
-            margin: 5px 5px 0 5px;
-            padding: 5px 10px 0px 10px;
-            height: 20px;
+            margin: 5px 10px 0 5px;
+            padding: 5px 15px 0px 15px;
+            height: 16px;
             cursor: pointer;
             .fa-download{
                 margin-right: 10px;
@@ -90,16 +96,18 @@
             width: 20px;
             margin-top: 10px;
             margin-left: 5px;
+            margin-right: 10px;
             cursor: pointer;
                 .fa-envelope{
                 color: white;
+                background-color: $gradient-end-red;
                 }
             }
             
             .profile-pic{
-               width: 36px;
-               height: 36px;
-               border: 2px solid $header-text-grey;
+               width: 32px;
+               height: 32px;
+               border: 2px solid $header-dark-grey;
                margin: 5px 10px 10px 10px;
                cursor: pointer;
                
@@ -118,6 +126,6 @@
         }
     }
 }
-.pretend-link{
+.pretend-link, .fa-caret-down{
     cursor: pointer;
 }
